draft application ready

--- a/app/chatApp/chatApp.html
+++ b/app/chatApp/chatApp.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="chatApp.css">
   <link rel="stylesheet" href="components/toolbar/toolbar.css">
   <link rel="stylesheet" href="components/welcome/welcome.css">
+  <link rel="stylesheet" href="components/chat/chat.css">
   <link rel="stylesheet" href="components/messageBox/messageBox.css">
 </head>
 <body>
@@ -16,6 +17,8 @@
   <script src="chatApp.js"></script>
   <script src="components/toolbar/toolbar.js"></script>
   <script src="components/welcome/welcome.js"></script>
+  <script src="components/chat/chat.js"></script>
   <script src="components/messageBox/messageBox.js"></script>
+  <script src="services/messagingService.js"></script>
 </body>
 </html>
